image upload, final deploy

--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,10 @@
     "rules": "database-rules.json"
   },
   
+  "storage": {
+    "rules": "storage.rules"
+  },
+  
   "hosting": {
     "public": "./",
     "ignore": [
